--- a/dialogconfig.ui
+++ b/dialogconfig.ui
@@ -20,7 +20,7 @@
    <item row="0" column="0">
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>1</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="tab">
       <attribute name="title">
@@ -214,7 +214,11 @@
                </spacer>
               </item>
               <item>
-               <widget class="QLineEdit" name="TcpEdit"/>
+               <widget class="QLineEdit" name="TcpEdit">
+                <property name="placeholderText">
+                 <string/>
+                </property>
+               </widget>
               </item>
              </layout>
             </item>
