--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Simulasi FCS</string>
+   <string>Simulasi OSD</string>
   </property>
   <property name="styleSheet">
    <string notr="true">QMainWindow {
